deployments/pathweb/overseerr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: media-services
  labels:
    app.kubernetes.io/name: overseerr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  serviceName: overseerr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr:latest
        ports:
        - containerPort: 5055
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: "100m"
            memory: "300Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
