deployments/pathweb/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    external-dns: local-pdns
    # annotations:
# traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: overseerr.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: overseerr-headless
            port:
              name: http
  tls:
  - hosts:
    - overseerr.services.home.yrf.me
    secretName: services-wildcard-cert
